--- a/style.css
+++ b/style.css
@@ -73,6 +73,9 @@ li{
     /* background-color: #e50914; */
     background-color: #be0e17;
     background-color: #d39e00;
+    /* background-color: #008fd3; */
+    /* background-color: #00adff; */
+
     padding: 0.5rem;
     text-align: center;
     margin-top: -0.5rem;
@@ -360,6 +363,103 @@ li{
     /* margin-top: 1rem; */
 }
 
+/* --------------------------------------Testimonial-------------------------------------- */
+.wrapper-h1{
+    text-align: center;
+    padding-top: 3rem;
+}
+.testimonial{
+    width: 100vw;
+    height: auto;
+    margin: 30px auto;
+
+}
+.testimonial .row-r{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.testimonial .item{
+    width: 220px;
+    width: 300px;
+    margin: 20px 25px;
+    color: black;
+    text-align: center;
+    background-color: white;
+    background-color: #DAAA63;
+    background-color: #ff9800;
+    background-color: #b400ff;
+    background-color: #0c006e;
+    background-color: #00e7ff;
+    background-color: #ffd400;
+    background-color: #00e7ff;
+    background-color: #ffcc80;
+    background-color: #ffd18d;
+    background-color: #17a2b8;
+    background-color: #DAAA63;
+    background-color: #00e7ff;
+    background-color: #ebd595;
+    background-color: #7fcbd2;
+    background-color: #00393e;
+    background-color: #3e0000;
+    background-color: #15003e;
+    background-color: #171717;
+    color: white;
+    /* color: #2C1810; */
+    /* background-color: #DAAA63;
+    background-color: #2C1810; */
+    box-shadow: 0 0 5px rgba(0,0,0,0.125);
+    border-radius: 25px;
+
+}
+
+.testimonial .item .img{
+    padding: 20px;
+}
+
+
+.testimonial .item .img img{
+    width: 100px;
+    display: block;
+    margin: 0 auto;
+}
+
+
+.testimonial .item .name{
+    margin-bottom: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    /* color: white; */
+    /* background-color: white; */
+}
+
+.testimonial .item .content{
+    background-color: white;
+    /* background-color: #2C1810;
+    background-color: #DAAA63; */
+    color: white;
+    color: #DAAA63;
+    color:  #2C1810;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    padding-bottom: 10px;
+}
+
+
+.testimonial .item .content h1{
+    margin-bottom: 10px;
+    color: #2C1810;
+}
+.testimonial .item .content p{
+    line-height: 20px;
+    word-spacing: 2px;
+    /* padding-bottom: 15px; */
+}
 /* --------------------------------------Footer------------------------------------------- */
 
 .footer{
@@ -452,5 +552,41 @@ li{
         padding-left:60px ;
         padding-right: 20px;
         width: 100%;
+    }
+}
+
+
+@media only screen and (max-width: 550px){
+    .item-content-description{
+        /* padding-left: 1rem; */
+        padding-right: 1rem;
+    }
+    .item-content-title{
+        font-size: 2.5rem;
+        line-height: 3rem;
+    }
+
+    .nav-menu{
+        padding-left: 0;
+        left: 30%;
+    }
+    .ham-menu{
+        padding-right: 1.5rem;
+    }
+}
+
+
+@media only screen and (max-width: 377px){
+    .nav-menu{
+        padding-left: 0;
+        left: 25%;
+    }
+}
+
+
+@media only screen and (max-width: 377px){
+    .nav-menu{
+        padding-left: 0;
+        left: 20%;
     }
 }
